--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,15 +43,20 @@ dependencies:
   http: ^0.13.6
   fluttertoast: ^8.2.2
   googleapis: ^2.0.0
-  webview_flutter: ^2.3.0
   image_picker: ^0.8.7+5
   modal_progress_hud_nsn: ^0.4.0
   googleapis_auth: ^1.4.1
   url_launcher: ^6.1.11
   youtube_explode_dart: ^1.12.4
-  youtube_player_iframe: ^2.3.0
+  youtube_player_iframe: ^3.1.0
   get: ^4.1.4
   dio: ^4.0.0
+  shared_preferences: ^2.1.1
+  connectivity: ^3.0.6
+  webviewtube: ^1.4.1
+  easy_localization: ^3.0.0
+  flutter_translate: ^3.1.0
+
 
 dev_dependencies:
   flutter_test:
@@ -78,7 +83,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-  #   - images/a_dot_ham.jpeg
+  #  - images/i18n
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
