--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   webviewtube: ^1.4.1
   easy_localization: ^3.0.0
   flutter_translate: ^3.1.0
+  video_thumbnail: ^0.5.3
+  numberpicker: ^2.0.1
+  package_info_plus: ^4.0.2
 
 
 dev_dependencies:
